--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,14 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+	<!-- repository for springfox plugin -->
+	<repositories>
+	    <repository>
+	      <id>jcenter-snapshots</id>
+	      <name>jcenter</name>
+    	  <url>https://jcenter.bintray.com/</url>
+    	</repository>
+	</repositories>
 
     <dependencies>
         <dependency>
@@ -180,6 +188,17 @@
                     <artifactId>commons-logging</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <!-- springfox plugin for swagger documentation -->
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>2.6.1</version>
+		</dependency>
+	    <dependency>
+        	<groupId>io.springfox</groupId>
+        	<artifactId>springfox-swagger-ui</artifactId>
+        	<version>2.6.1</version>
         </dependency>
 
         <!-- Test Artifacts -->
