update active profiles selection

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,21 +1,29 @@
+# active profiles config
+#
+# application use two active profiles
+#
+# one for select repository layer
+# ------------------------------------------------
+# When using HSQL, use: hsqldb
+# When using MySQL, use: mysql
+# When using PostgeSQL, use: postgresql
+# ------------------------------------------------
+#
+# one - for select database
+# ------------------------------------------------
 # When using Spring jpa, use: jpa
 # When using Spring JDBC, use: jdbc
 # When using Spring Data JPA, use: spring-data-jpa
+# ------------------------------------------------
 
-spring.profiles.active=spring-data-jpa
+spring.profiles.active=hsqldb,jdbc
 
-database=hsqldb
-spring.datasource.schema=classpath*:db/${database}/initDB.sql
-spring.datasource.data=classpath*:db/${database}/populateDB.sql
+# ------------------------------------------------
 
 server.port=9966
 server.context-path=/petclinic/
 
-
-spring.jpa.hibernate.ddl-auto=none
 spring.messages.basename=messages/messages
 
 logging.level.org.springframework=INFO
-
-
-
+#logging.level.org.springframework=DEBUG
