first working config (still have CORS problems)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,13 +20,29 @@ spring.profiles.active=hsqldb,spring-data-jpa
 
 # ------------------------------------------------
 
-server.port=9966
+server.port=8080
 server.context-path=/petclinic/
 
 spring.messages.basename=messages/messages
 
-logging.level.org.springframework=INFO
-#logging.level.org.springframework=DEBUG
+#logging.level.org.springframework=INFO
 
+
+####   Disable Spring Security - start #####
+#security.ignored=/**
+#spring.security.enabled=false
+#management.security.enabled=false
+#security.basic.enabled=false
+####   Disable Spring Security - end #####
+
+
+security.oauth2.resource.filter-order=3
+
+spring.mvc.dispatch-options-request=true
+
+#logging.level.root=TRACE
+logging.level.org.springframework.security.oauth2=DEBUG
+logging.level.org.springframework.security=DEBUG
+#logging.level.org.springframework=DEBUG
 #logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
