fix CORS problem (now CORSFilter work)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,7 +36,7 @@ spring.messages.basename=messages/messages
 ####   Disable Spring Security - end #####
 
 
-security.oauth2.resource.filter-order=3
+#security.oauth2.resource.filter-order=3
 
 spring.mvc.dispatch-options-request=true
 
