--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,9 @@ jobs:
           keys:
             - v1-dependencies-{{ checksum "pom.xml" }}
       - run: mvn -U clean package verify
+      - run: sudo apt update
+      - run: sudo apt install awscli
+      - run: aws s3 ls
       - save_cache:
           paths:
             - ~/.m2
