--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
       - run: mvn -U clean package verify
       - run:
           name: install awscli
-          command: apt-get update | apt-get install awscli -y
+          command: apt-get update && apt-get -Y install awscli
 
       - save_cache:
           paths:
