--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -3,18 +3,18 @@ FROM maven:3.5.4-jdk-8-alpine as maven
 COPY ./pom.xml ./pom.xml
 COPY ./src ./src
 
-# RUN mvn dependency:go-offline -B
-# RUN mvn package
 RUN mvn --version
+RUN mvn dependency:go-offline -B
+RUN mvn package
 
 
 FROM openjdk:8u171-jre-alpine
 
-#WORKDIR /petclinic-rest
-#COPY --from=maven target/spring-petclinic-rest-*.jar ./spring-petclinic-rest.jar
+WORKDIR /petclinic-rest
+COPY --from=maven target/spring-petclinic-rest-*.jar ./spring-petclinic-rest.jar
 
-# RUN java -jar ./spring-petclinic-rest.jar
 RUN java -version
+RUN java -jar ./spring-petclinic-rest.jar
 
 
 FROM postman/newman:5
