--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -20,3 +20,5 @@ RUN java -jar ./spring-petclinic-rest.jar
 FROM postman/newman:5
 
 RUN newman --version
+RUN newman run https://api.getpostman.com/collections/14312820-c39aca89-b267-4d97-a2ca-b65df579f9fa?apikey=PMAK-60101515c9205f003495db6d-37971a23f29ae9913c6657a8fe028239f5 \
+  --environment https://api.getpostman.com/environments/14312820-58506620-e644-46ff-a263-1884e7935177?apikey=PMAK-60101515c9205f003495db6d-37971a23f29ae9913c6657a8fe028239f5
