--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,3 +36,5 @@ logging.level.org.springframework=INFO
 # by default the authentication is disabled
 petclinic.security.enable=false
 
+spring.jpa.properties.hibernate.search.default.directory_provider=filesystem
+spring.jpa.properties.hibernate.search.default.indexBase=./data/lucene
