--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,5 +36,8 @@ logging.level.org.springframework=INFO
 # by default the authentication is disabled
 petclinic.security.enable=false
 
-spring.jpa.properties.hibernate.search.default.directory_provider=filesystem
-spring.jpa.properties.hibernate.search.default.indexBase=./data/lucene
+spring.jpa.properties.hibernate.search.backend.directory.type=local-filesystem
+
+spring.jpa.properties.hibernate.search.backend.directory.root=./data/lucene
+
+spring.jpa.properties.hibernate.search.backend.analysis.configurer=org.springframework.samples.petclinic.config.AutocompleteLuceneAnalysisConfigurer
