modified test config

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -37,7 +37,7 @@ security.ignored=/**
 basic.authentication.enabled=true
 petclinic.security.enable=true
 
-spring.jpa.properties.hibernate.search.backend.directory.type=local-filesystem
+spring.jpa.properties.hibernate.search.backend.directory.type=local-heap
 
 spring.jpa.properties.hibernate.search.backend.directory.root=./data/test/lucene
 
