peter modified the REST_app to use mysql

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@
 # When using Spring Data JPA, use: spring-data-jpa
 # ------------------------------------------------
 
-spring.profiles.active=hsqldb,spring-data-jpa
+spring.profiles.active=mysql,spring-data-jpa
 
 # ------------------------------------------------
 
@@ -34,5 +34,5 @@ logging.level.org.springframework=INFO
 
 # enable the desired authentication type
 # by default the authentication is disabled
-petclinic.security.enable=false
+petclinic.security.enable=true
 
