--- a/src/main/resources/db/postgresql/Dockerfile
+++ b/src/main/resources/db/postgresql/Dockerfile
@@ -1,5 +1,5 @@
-FROM postgres:latest
-ENV POSTGRES_USE postgres
+FROM postgres:13.10-alpine
+ENV POSTGRES_USER postgres
 ENV POSTGRES_PASSWORD petclinic
 ENV POSTGRES_DB petclinic
 COPY initDB.sql /docker-entrypoint-initdb.d/
