--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -37,3 +37,5 @@ security.ignored=/**
 basic.authentication.enabled=true
 petclinic.security.enable=true
 
+cache.expiration.minutes=10
+cache.maximum.size=500
