--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@
 # ------------------------------------------------
 # When using HSQL, use: hsqldb
 # When using MySQL, use: mysql
-# When using PostgeSQL, use: postgresql
+# When using PostgeSQL, use: postgres
 # ------------------------------------------------
 #
 # one for select repository layer
@@ -22,6 +22,12 @@ spring.profiles.active=hsqldb,spring-data-jpa
 
 server.port=9966
 server.servlet.context-path=/petclinic/
+
+# database init, supports mysql and postgres too
+database=hsqldb
+spring.sql.init.schema-locations=classpath*:db/${database}/schema.sql
+spring.sql.init.data-locations=classpath*:db/${database}/data.sql
+
 
 spring.messages.basename=messages/messages
 spring.jpa.open-in-view=false
