--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -6,7 +6,7 @@
 # ------------------------------------------------
 # When using HSQL, use: hsqldb
 # When using MySQL, use: mysql
-# When using PostgeSQL, use: postgresql
+# When using PostgeSQL, use: postgres
 # ------------------------------------------------
 #
 # one - for select database
@@ -23,6 +23,10 @@ spring.profiles.active=hsqldb,spring-data-jpa
 server.port=9966
 server.servlet.context-path=/petclinic/
 spring.jpa.open-in-view=false
+
+# database init
+spring.sql.init.schema-locations=classpath*:db/hsqldb/schema.sql
+spring.sql.init.data-locations=classpath*:db/hsqldb/data.sql
 
 spring.messages.basename=messages/messages
 logging.level.org.springframework=INFO
