--- a/src/main/resources/application-mysql.properties
+++ b/src/main/resources/application-mysql.properties
@@ -1,16 +1,7 @@
-# uncomment for init database (first start)
-#spring.sql.init.mode=always
-#spring.sql.init.schema-locations=classpath*:db/mysql/initDB.sql
-#spring.sql.init.data-locations=classpath*:db/mysql/populateDB.sql
-
-# MySQL config start
-#----------------------------------------------------------------
-spring.datasource.url = jdbc:mysql://localhost:3306/petclinic?useUnicode=true
-spring.datasource.username=pc
-spring.datasource.password=petclinic
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.jpa.database=MYSQL
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto=none
-#----------------------------------------------------------------
-# MySQL config end 
+# database init, supports mysql too
+database=mysql
+spring.datasource.url=${MYSQL_URL:jdbc:mysql://localhost/petclinic}
+spring.datasource.username=${MYSQL_USER:petclinic}
+spring.datasource.password=${MYSQL_PASS:petclinic}
+# SQL is written to be idempotent so this is safe
+spring.sql.init.mode=always
