--- a/pom.xml
+++ b/pom.xml
@@ -350,8 +350,7 @@
                         <configuration>
                             <rules>
                                 <requireJavaVersion>
-                                    <message>This build requires at least Java ${java.version}, update your JVM, and run
-                                        the build again
+                                    <message>This build requires at least Java ${java.version}, update your JVM, and run the build again
                                     </message>
                                     <version>[${java.version},)</version>
                                 </requireJavaVersion>
