Update Maven and wrapper

--- a/pom.xml
+++ b/pom.xml
@@ -148,6 +148,12 @@
         </dependency>
 
         <dependency>
+            <groupId>org.apache.maven.doxia</groupId>
+            <artifactId>doxia-core</artifactId>
+            <version>2.0.0</version> <!-- Use latest stable version -->
+        </dependency>
+
+        <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
             <scope>test</scope>
@@ -159,6 +165,16 @@
             <version>${jaxb-api.version}</version>
         </dependency>
     </dependencies>
+
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-project-info-reports-plugin</artifactId>
+                <version>3.8.0</version>
+            </plugin>
+        </plugins>
+    </reporting>
 
     <build>
         <plugins>
