Update Maven and wrapper (#188)
* Update Maven and wrapper

* Fixes from review

--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,9 @@
         <jacoco.version>0.8.12</jacoco.version>
         <openapi-generator-maven-plugin.version>7.10.0</openapi-generator-maven-plugin.version>
         <build-helper-maven-plugin.version>3.6.0</build-helper-maven-plugin.version>
+        <doxia.version>2.0.0</doxia.version> <!-- TODO, remove this once project-info-reports itself upgrades -->
+        <maven.project.info.reports.plugin.version>3.8.0</maven.project.info.reports.plugin.version>
+
 
         <!-- Docker -->
         <docker.jib-maven-plugin.version>3.4.4</docker.jib-maven-plugin.version>
@@ -147,6 +150,13 @@
             <version>${mapstruct.version}</version>
         </dependency>
 
+        <!-- TODO remove once project-info-reports has updated -->
+        <dependency>
+            <groupId>org.apache.maven.doxia</groupId>
+            <artifactId>doxia-core</artifactId>
+            <version>${doxia.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
@@ -159,6 +169,16 @@
             <version>${jaxb-api.version}</version>
         </dependency>
     </dependencies>
+
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-project-info-reports-plugin</artifactId>
+                <version>${maven.project.info.reports.plugin.version}</version>
+            </plugin>
+        </plugins>
+    </reporting>
 
     <build>
         <plugins>
